--- a/front/matchs/css/styles.css
+++ b/front/matchs/css/styles.css
@@ -21,3 +21,9 @@ body {
 .btn-margin-last {
   margin-right: 0 !important;
 }
+
+.custom-modal-dialog {
+  width: 1920px;
+  height: 1080px;
+  margin: auto;
+}
